match engagement  display view - fix spacing so that status box is wider (for d8-1554)

--- a/web/themes/custom/accesstheme/scss/style.scss
+++ b/web/themes/custom/accesstheme/scss/style.scss
@@ -1964,6 +1964,18 @@ footer {
   margin-top: 1rem;
 }
 
+// for content moderation that gets squished by sidebar
+//.node--type-match-engagement .entity-moderation-form__item {
+.entity-moderation-form__item {
+  margin-right:1em!important;
+}
+.entity-moderation-form {
+  padding-left: 1em;
+  padding-right: .5em;
+}
+
+// want something like this for the tag cloud on forms, but not working yet
 details.tags {
   padding: 50px !important;
 }
+
